--- a/scimgateway/package.json
+++ b/scimgateway/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "local-config",
+  "name": "my-workspace",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,8 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-     "json-rules-engine": "^6.1.2",
-      "koa-cors": "^0.0.16",
-      "scimgateway": "^4.1.14"
+    "@prisma/client": "^4.16.2",
+    "json-rules-engine": "^6.1.2",
+    "koa-cors": "^0.0.16",
+    "scimgateway": "^4.1.14"
+  },
+  "devDependencies": {
+    "prisma": "^4.16.2"
   }
 }
+
