--- a/scimgateway/package.json
+++ b/scimgateway/package.json
@@ -13,7 +13,8 @@
     "@prisma/client": "^4.16.2",
     "json-rules-engine": "^6.1.2",
     "koa-cors": "^0.0.16",
-    "scimgateway": "^4.1.14"
+    "scimgateway": "^4.1.14",
+    "exceljs": "^4.0.3"
   },
   "devDependencies": {
     "prisma": "^4.16.2"
