--- a/scimgateway/package.json
+++ b/scimgateway/package.json
@@ -14,6 +14,7 @@
     "exceljs": "^4.0.3",
     "flat-db": "^4.0.0",
     "json-rules-engine": "^6.1.2",
+    "jsonata": "^2.0.3",
     "koa-cors": "^0.0.16",
     "scimgateway": "^4.1.14"
   },
